fixed switch too large on mobile

--- a/src/components/App/Routes/Home/CTA/styles.scss
+++ b/src/components/App/Routes/Home/CTA/styles.scss
@@ -228,89 +228,96 @@ input[class*="mce_inline_error"] {
 }
 
 
-$labelWidth: 300px;
+@mixin styling($labelWidth) {
 
-
-.container {
-  margin: 0 auto;
-  padding: 90px 0;
-  width: 400px;
-}
-
-.switch {
-  position: relative;
-  margin: 20px auto;
-  height: 56px;
-  width: $labelWidth * 2 + 4px;
-  background: $greymedium;
-  border-radius: 30px;
-  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.3), 0 1px rgba(255, 255, 255, 0.1);
-}
-
-.switchlabel {
-  position: relative;
-  z-index: 2;
-  pointer-events: none;
-  float: left;
-  margin-left: -1 * ($labelWidth + 2px);
-  width: $labelWidth;
-  line-height: 60px;
-  font-size: 11px;
-  color: rgba($greylight, .8);
-  text-align: center;
-  text-shadow: 0 1px 1px rgba(black, .45);
-  cursor: pointer;
-
-  &:active { font-weight: bold; }
-}
-
-.switchlabeloff { padding-left: 2px; }
-.switchlabelon { padding-right: 2px; }
-
-.switchinput {
-
-  width: $labelWidth + 2px;
-  float: left;
-  margin: 0;
-  height: 100%;
-
-  &:checked + .switchlabel {
-    font-weight: bold;
-    color: $greylight;
-    text-shadow: 0 1px rgba(white, .25);
+  .container {
+    margin: 0 auto;
+    padding: 90px 0;
+    width: 400px;
   }
 
-  &:checked + .switchlabelon ~ .switchselection {
-    left: $labelWidth + 2px;
+  .switch {
+    position: relative;
+    margin: 20px auto;
+    height: 56px;
+    width: $labelWidth * 2 + 4px;
+    background: $greymedium;
+    border-radius: 30px;
+    box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.3), 0 1px rgba(255, 255, 255, 0.1);
   }
+
+  .switchlabel {
+    position: relative;
+    z-index: 2;
+    pointer-events: none;
+    float: left;
+    margin-left: -1 * ($labelWidth + 2px);
+    width: $labelWidth;
+    line-height: 60px;
+    font-size: 11px;
+    color: rgba($greylight, .8);
+    text-align: center;
+    text-shadow: 0 1px 1px rgba(black, .45);
+    cursor: pointer;
+
+    &:active { font-weight: bold; }
+  }
+
+  .switchlabeloff { padding-left: 2px; }
+  .switchlabelon { padding-right: 2px; }
+
+  .switchinput {
+
+    width: $labelWidth + 2px;
+    float: left;
+    margin: 0;
+    height: 100%;
+
+    &:checked + .switchlabel {
+      font-weight: bold;
+      color: $greylight;
+      text-shadow: 0 1px rgba(white, .25);
+    }
+
+    &:checked + .switchlabelon ~ .switchselection {
+      left: $labelWidth + 2px;
+    }
+  }
+
+  .switchselection {
+    display: block;
+    position: absolute;
+    pointer-events: none;
+    z-index: 1;
+    top: 1px;
+    left: 2px;
+    width: $labelWidth;
+    height: 52px;
+    background: $red;
+    // background-image: linear-gradient(to bottom, $greydark, $greydark);
+    -webkit-box-shadow: inset 0 1px rgba(255, 255, 255, 0.5), 0 0 2px rgba(0, 0, 0, 0.2);
+    transition: left 0.15s ease-out;
+    border-radius: 30px;
+    .switchblue & {
+      background: #3aa2d0;
+    }
+
+    .switchyellow & {
+      background: #c4bb61;
+    }
+  }
+
 }
 
-.switchselection {
-  display: block;
-  position: absolute;
-  pointer-events: none;
-  z-index: 1;
-  top: 1px;
-  left: 2px;
-  width: $labelWidth;
-  height: 52px;
-  background: $red;
-  // background-image: linear-gradient(to bottom, $greydark, $greydark);
-  -webkit-box-shadow: inset 0 1px rgba(255, 255, 255, 0.5), 0 0 2px rgba(0, 0, 0, 0.2);
-  transition: left 0.15s ease-out;
-  border-radius: 30px;
-  .switchblue & {
-    background: #3aa2d0;
-  }
+@media (min-width: 721px) {
 
-  .switchyellow & {
-    background: #c4bb61;
-  }
+  @include styling($labelWidth: 300px);
+
 }
-
-
 
 @media (max-width: 720px) {
+
+  @include styling($labelWidth: 250px);
 
 .form {
   margin-left: -10px;
@@ -337,6 +344,8 @@ $labelWidth: 300px;
 }
 
 @media (max-width: 600px) {
+
+  @include styling($labelWidth: 150px);
 
   .section h1 {
     text-transform:uppercase;
